# build-server-protocol

./: .bazelignore  .bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .jvmopts  .prettierignore  .scala-steward.conf  .scalafmt.conf  .travis.yml  .yamlfmt  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE.md  README.md  WORKSPACE  WORKSPACE.bzlmod  bsp.md  build.sbt  index.html  maven_install.json  readme.md  resolved_deps.py  sitemap.xml  smithy-build.json  version.bzl
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: format.yml  publish-docs.yml  release.yml  verify.yml
bsp4j/: BUILD
bsp4j/src/ch/epfl/scala/bsp4j/: Bsp4j.java  BspConnectionDetails.java  BuildClient.java  BuildClientCapabilities.java  BuildServer.java  BuildServerCapabilities.java  BuildTarget.java  BuildTargetCapabilities.java  BuildTargetDataKind.java  BuildTargetEvent.java  BuildTargetEventDataKind.java  BuildTargetEventKind.java  BuildTargetIdentifier.java  BuildTargetTag.java  CancelExtension.java  CancelRequestParams.java  CargoBuildServer.java  CargoBuildTarget.java  CargoFeaturesStateResult.java  CleanCacheParams.java  CleanCacheResult.java  CodeDescription.java  CompileParams.java  CompileProvider.java  CompileReport.java  CompileResult.java  CompileResultDataKind.java  CompileTask.java  CppBuildServer.java  CppBuildTarget.java  CppOptionsItem.java  CppOptionsParams.java  CppOptionsResult.java  DebugProvider.java  DebugSessionAddress.java  DebugSessionParams.java  DebugSessionParamsDataKind.java  DependencyModule.java  DependencyModuleDataKind.java  DependencyModulesItem.java  (+130 more)
bsp4j/src/org/eclipse/lsp4j/util/: Preconditions.java
bsp4j/src/test/bloop/project/: plugins.sbt
bsp4j/src/test/scala/tests/: BloopSuite.scala  Cancelable.scala
bsp4s/: BUILD
bsp4s/src/ch/epfl/scala/bsp/: Bsp.scala
bsp4s/src/ch/epfl/scala/util/: CustomCodec.scala
bsp4s/src/org/jetbrains/bsp/util/: CustomCodec.scala
codegen/: BUILD
codegen/src/main/kotlin/bsp/codegen/: CodegenFile.kt  FilesGenerator.kt  Loader.kt
codegen/src/main/resources/: CustomCodec.scala  Preconditions.java  Serializers.kt  template.md
codegen/src/main/scala/bsp/codegen/: Codegen.scala  CodegenFile.scala  DocTree.scala  ExtensionLoader.scala  FilesGenerator.scala  IR.scala  JavaRenderer.scala  Lines.scala  Main.scala  MarkdownRenderer.scala  ModelLoader.scala  ProtocolVersionLoader.scala  Renderer.scala  RustRenderer.scala  SmithyToIR.scala  ToLines.scala  TypescriptRenderer.scala  TypescriptSpecRenderer.scala  VersionLoader.scala  dsl.scala
codegen/src/main/scala/bsp/codegen/rust/: Cargo.toml
codegen/src/main/scala/bsp/codegen/rust/src/: base_definitions.rs  lib.rs
codegen/src/test/kotlin/: BUILD  DslTest.kt
codegen/src/test/resources/: DocsApprovalTest.bsp.approved.txt  DocsApprovalTest.bsp.cargo.approved.txt  DocsApprovalTest.bsp.cpp.approved.txt  DocsApprovalTest.bsp.java.approved.txt  DocsApprovalTest.bsp.jvm.approved.txt  DocsApprovalTest.bsp.maven.approved.txt  DocsApprovalTest.bsp.python.approved.txt  DocsApprovalTest.bsp.sbt.approved.txt  DocsApprovalTest.bsp.scala.approved.txt
codegen/src/test/scala/: CustomApprovalNamer.scala  DocsApprovalTest.docsAreApproved.approved.txt  DocsApprovalTest.scala  ExtensionApprovalTest.extensionIsApproved.cpp.approved.txt  ExtensionApprovalTest.extensionIsApproved.java.approved.txt  ExtensionApprovalTest.extensionIsApproved.jvm.approved.txt  ExtensionApprovalTest.extensionIsApproved.maven.approved.txt  ExtensionApprovalTest.extensionIsApproved.python.approved.txt  ExtensionApprovalTest.extensionIsApproved.sbt.approved.txt  ExtensionApprovalTest.extensionIsApproved.scala.approved.txt
css/: main.css
docs/: BUILD  Makefile  bsp.html  bsp.md  faq.html  faq.md  implementations.html  implementations.md  index.html  index.md  server-discovery.html  server-discovery.md  specgen.md  specification.html  specification.md
docs/bindings/: java.html  java.md
docs/extensions/: cargo.md  cpp.md  java.md  jvm.md  maven.md  python.md  rust.md  sbt.html  sbt.md  scala.html  scala.md
docs/overview/: implementations.md
en/: index.html
old-scala-codegen/: BUILD
old-scala-codegen/src/bsp/codegen/bsp4j/: JavaRenderer.scala  Main.scala
old-scala-codegen/src/bsp/codegen/bsp4s/: Main.scala  ScalaRenderer.scala
old-scala-codegen/src/bsp/codegen/docs/: MarkdownRenderer.scala  TypescriptRenderer.scala
old-scala-codegen/src/bsp/codegen/ir/: IR.scala  SmithyToIR.scala
old-scala-codegen/src/main/scala/bsp/codegen/: Lines.scala  ToLines.scala  dsl.scala
project/: BuildPlugin.scala  plugins.sbt  scalapb.sbt
rules/generator/: BUILD  copy_to_repo.sh  generator.bzl  website.bzl
rules/kotlin/: junit5.bzl
rules/scala/: scala_export.bzl
spec/: BUILD
spec-traits/: BUILD
spec-traits/src/main/java/bsp/traits/: DataKindTrait.java  SetTrait.java  (+7 more)
spec-traits/src/main/kotlin/traits/: DataKindTrait.kt  DataTrait.kt  DocsPriorityTrait.kt  EnumKindTrait.kt  JsonNotificationTrait.kt  JsonRequestTrait.kt  JsonRpcTrait.kt  SetTrait.kt  UntaggedUnionTrait.kt
src/main/protobuf/: bsp.proto
testkit/: BUILD
tests/: BUILD
tests/src/test/bloop/: build.sbt  readme.md
tests/src/test/scala/tests/: BloopSuite.scala  Cancelable.scala  MockClientSuite.scala  MockSuite.scala  SerializationPropertySuite.scala  SerializationSuite.scala  TestBuildClient.scala  TypoSuite.scala
tools/: BUILD
tools/format/: BUILD
tools/maven/: BUILD  pom.tpl
tools/rules/generator/: generator.bzl
tools/rules/scala/: scala_export.bzl
website/: .gitignore  .prettierignore  BUILD  docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  sidebars.json  siteConfig.js
website/core/: Footer.js
website/docs/: specification.md
website/docs/bindings/: java.md
website/docs/extensions/: jvm.md  python.md  scala.md
website/i18n/: en.json
website/pages/en/: index.js
website/src/components/HomepageFeatures/: index.js
website/src/css/: customTheme.css
website/src/pages/: index.js
website/static/css/: custom.css
(+456 files in other folders)
