load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("//rules/generator:generator.bzl", "library_generator")
load("//rules/generator:website.bzl", "website")

# This is a wrapper which ensures that all generators are first run in parallel and then
#  the formatter is run sequentially, i.e. to avoid the formatter running in parallel
#  with the generators.
multirun(
    name = "generate",
    commands = [
        "//:generate_all_command",
        "//:format_all_command",
    ],
)

multirun(
    name = "generate_all",
    commands = [
        "//:generate-bsp4s_command",
        "//:generate-bsp4j_command",
        "//:generate-website_command",
    ],
    jobs = 0,
)

command(
    name = "generate_all_command",
    command = ":generate_all",
)

command(
    name = "format_all_command",
    command = "//tools:format",
)

filegroup(
    name = "docs",
    srcs = glob(["docs/**/*"]),
)

website(
    name = "generate-website",
    data = [
        ":docs",
    ],
    jars = [
        "//bsp4j",
        "//old-scala-codegen",
        "//codegen:codegen.jar",
        "@maven//:org_eclipse_lsp4j_org_eclipse_lsp4j_jsonrpc",
        "@maven//:com_google_code_gson_gson",
        "@com_github_jetbrains_kotlin//:kotlin-stdlib",
        "@maven//:software_amazon_smithy_smithy_model",
        "@maven//:software_amazon_smithy_smithy_utils",
        "//spec-traits:spec-traits.jar",
        "@maven//:com_monovore_decline_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:org_typelevel_cats_kernel_2_13",
    ],
    library_version = "2.1.0",
)

java_binary(
    name = "bsp4s-generator",
    main_class = "bsp.codegen.bsp4s.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4s",
    gen_tool = ":bsp4s-generator",
    library_name = "bsp4s",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4j-generator",
    main_class = "bsp.codegen.bsp4j.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4j",
    gen_tool = ":bsp4j-generator",
    library_name = "bsp4j",
    visibility = ["//visibility:public"],
)
