load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("//rules/generator:generator.bzl", "library_generator")
load("//rules/generator:website.bzl", "website")

exports_files([".scalafmt.conf"])

# This is a wrapper which ensures that all generators are first run in parallel and then
#  the formatter is run sequentially, i.e. to avoid the formatter running in parallel
#  with the generators.
multirun(
    name = "generate",
    commands = [
        "//:generate_all_command",
        "//:format_all_command",
    ],
)

multirun(
    name = "generate_all",
    commands = [
        "//:generate-bsp4j_command",
        "//:generate-bsp4s_command",
        "//website:generate-website_command",
    ],
    jobs = 0,
)

command(
    name = "generate_all_command",
    command = ":generate_all",
)

command(
    name = "format_all_command",
    command = "//tools/format",
)

java_binary(
    name = "bsp4j-generator",
    main_class = "bsp.codegen.bsp4j.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4j",
    gen_tool = ":bsp4j-generator",
    library_name = "bsp4j",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4s-generator",
    main_class = "bsp.codegen.bsp4s.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4s",
    gen_tool = ":bsp4s-generator",
    library_name = "bsp4s",
    visibility = ["//visibility:public"],
)
