bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_python", version = "0.32.2")
bazel_dep(name = "rules_kotlin", version = "1.9.5")
bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # smithy
        "software.amazon.smithy:smithy-model:1.49.0",
        "software.amazon.smithy:smithy-codegen-core:1.49.0",
        "software.amazon.smithy:smithy-utils:1.49.0",

        # tests
        "org.junit.jupiter:junit-jupiter:5.10.2",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.jupiter:junit-jupiter-params:5.10.2",
        "org.junit.platform:junit-platform-console:1.10.2",

        # publishing
        "com.vanniktech:gradle-maven-publish-plugin:0.28.0",

        # docs
        "org.scalameta:mdoc_2.13:2.5.2",

        # formatting
        "org.scalameta:scalafmt-cli_2.13:3.8.1",

        # scala runtime libs
        "com.github.plokhotnyuk.jsoniter-scala:jsoniter-scala-core_2.13:2.28.3",
        "com.github.plokhotnyuk.jsoniter-scala:jsoniter-scala-macros_2.13:2.28.3",
        "me.vican.jorge:jsonrpc4s_2.13:0.1.0",

        # testkit
        "org.scalacheck:scalacheck_2.13:1.17.0",
        "de.danielbechler:java-object-diff:0.95",
        "org.scala-lang.modules:scala-java8-compat_2.13:1.0.2",
        "org.scala-lang.modules:scala-collection-compat_2.13:2.11.0",

        # scala tests
        "com.googlecode.java-diff-utils:diffutils:1.3.0",
        "org.scala-sbt.ipcsocket:ipcsocket:1.0.1",
        "org.scalatest:scalatest_2.13:3.2.16",
        "org.scalatestplus:scalacheck-1-16_2.13:3.2.14.0",

        # these must match the versions used by jsonrpc4s
        "io.monix:monix_2.13:3.2.0",
        "io.monix:monix-eval_2.13:3.2.0",
        "io.monix:monix-execution_2.13:3.2.0",
        "com.outr:scribe_2.13:3.5.5",

        # lsp4j
        "org.eclipse.lsp4j:org.eclipse.lsp4j:0.23.1",
        "org.eclipse.lsp4j:org.eclipse.lsp4j.generator:0.23.1",
        "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.23.1",

        # xtend (must be aligned with the version used by lsp4j)
        "org.eclipse.xtend:org.eclipse.xtend.core:2.32.0",
        "org.eclipse.xtend:org.eclipse.xtend.lib:2.32.0",
        "org.eclipse.xtext:org.eclipse.xtext.xbase.lib:2.32.0",

        # scala stdlib
        "org.scala-lang:scala-library:2.13.14",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo.maven.apache.org/maven2",
        "https://repo1.maven.org/maven2",
        "https://jitpack.io",
    ],
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

bazel_dep(name = "rules_nodejs", version = "6.1.1")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.11.1")

bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = ["//website:package.json"],
    pnpm_lock = "//website:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

bazel_dep(name = "rules_multirun", version = "0.9.0")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.6")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
